docs: grouped the endpoints by tags
All of the endpoints are now in a sub directory instead of the root of the domain.
Meaning that for example /recent is now /basics/recent.
